can run version

--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-    "predict-target": "minute-debug",
+    "predict-target": "10minute-debug",
     "device": {
         "use-gpu": true,
-        "cuda": "cuda:3"
+        "cuda": "cuda:1"
     },
     "data-parameters": {
-        "pred-len": 1440,
-        "future-len": 60,
+        "pred-len": 144,
+        "future-len": 20,
         "sensor-num": 4,
-        "move-interval": 10
+        "move-interval": 1
     },
     "env-factor-load": {
         "low-tp": true,
@@ -19,7 +19,7 @@
         "num-workers": 0,
         "batch-size": 16,
         "learning-rate": 0.003,
-        "epoch-num": 3,
+        "epoch-num": 300,
         "load-model": false,
         "save-model": false
     },
