--- a/config.json
+++ b/config.json
@@ -2,30 +2,25 @@
     "predict-target": "10minute-debug",
     "device": {
         "use-gpu": true,
-        "cuda": "cuda:1"
+        "cuda": "cuda:2"
     },
     "data-parameters": {
         "pred-len": 144,
-        "future-len": 20,
+        "future-len": 6,
         "sensor-num": 4,
         "move-interval": 1
     },
-    "env-factor-load": {
-        "low-tp": true,
-        "high-tp": true,
-        "waterline": true
-    },
     "model-parameters": {
         "num-workers": 0,
-        "batch-size": 16,
-        "learning-rate": 0.003,
-        "epoch-num": 300,
+        "batch-size": 64,
+        "learning-rate": 0.006,
+        "epoch-num": 150,
         "load-model": false,
         "save-model": false
     },
-    "predict-result": {
-        "server": "/home/lwt/bohaiwan-wattnet/union_predict/pred_result",
-        "local": "C:\\WorkSpace\\bohaiwan-wattnet\\union_predict\\pred_result"
+    "predict-pics": {
+        "server": "/home/lwt/bohaiwan-wattnet/pred_res/pics",
+        "local": "C:\\WorkSpace\\bohaiwan-wattnet\\pred_res\\pics"
     },
     "model-paras": {
         "server": "/home/lwt/bohaiwan-wattnet/union_predict/model_paras",
