--- a/config.json
+++ b/config.json
@@ -5,21 +5,25 @@
         "cuda": "cuda:2"
     },
     "data-parameters": {
-        "pred-len": 72,
+        "pred-len": 48,
         "future-len": 6,
         "sensor-num": 11,
         "move-interval": 1,
         "valid-sensors": [4, 6, 7, 8, 10, 11, 30, 31, 35, 36, 37]
     },
-    "model-parameters": {
+    "model-hyper-para": {
+        "depth": 3,
+        "n-repeat": 3
+    },
+    "model-config": {
         "num-workers": 0,
         "batch-size": 64,
         "learning-rate": 0.006,
         "epoch-num": 150,
-        "visdom-env": "Train Process 2",
+        "visdom-env": "Train Process 3",
         "load-model": false,
-        "save-model": false,
-        "save-name": "1"
+        "save-model": true,
+        "save-name": "p48d3r3"
     },
     "predict-pics": {
         "server": "/home/lwt/bohaiwan-wattnet/pred_res/pics",
@@ -29,7 +33,7 @@
         "server": "/home/lwt/bohaiwan-wattnet/pred_res/tables",
         "local": "C:\\WorkSpace\\bohaiwan-wattnet\\pred_res\\tables"
     },
-    "model-paras-loc": {
+    "model-weights-loc": {
         "server": "/home/lwt/bohaiwan-wattnet/model_paras",
         "local": "C:\\WorkSpace\\bohaiwan-wattnet\\model_paras"
     },
