--- a/config.json
+++ b/config.json
@@ -2,28 +2,29 @@
     "predict-target": "10minutes",
     "device": {
         "use-gpu": true,
-        "cuda": "cuda:2"
+        "cuda": "cuda:1"
     },
     "data-parameters": {
-        "pred-len": 30,
+        "pred-len": 36,
         "future-len": 6,
         "sensor-num": 11,
         "move-interval": 1,
         "valid-sensors": [4, 6, 7, 8, 10, 11, 30, 31, 35, 36, 37]
     },
     "model-hyper-para": {
-        "depth": 2,
-        "n-repeat": 4
+        "depth": 4,
+        "n-repeat": 1
     },
     "model-config": {
         "num-workers": 0,
         "batch-size": 64,
         "learning-rate": 0.006,
-        "epoch-num": 150,
-        "visdom-env": "Train Process 4",
-        "load-model": false,
-        "save-model": true,
-        "save-name": "p30d2r4"
+        "epoch-num": 100,
+        "visdom-env": "Train Process 1",
+        "load-model": true,
+        "save-model": false,
+        "save-name": "type3-p36d4r1",
+        "show-attn": true
     },
     "predict-pics": {
         "server": "/home/lwt/bohaiwan-wattnet/pred_res/pics",
