--- a/config.json
+++ b/config.json
@@ -1,33 +1,58 @@
 {
-    "predict-target": "10minutes",
+    "predict-target": "bohaiwan2020-5",
     "device": {
         "use-gpu": true,
         "cuda": "cuda:2"
     },
     "data-parameters": {
         "pred-len": 36,
+        "future-gap": 0,
         "future-len": 6,
-        "sensor-num": 11,
+        "sensor-num": 19,
         "move-interval": 1,
-        "valid-sensors": [4, 6, 7, 8, 10, 11, 30, 31, 35, 36, 37]
+        "valid-sensors": [
+            "FSS_S01_B1_003",
+            "FSS_S01_B1_004",
+            "FSS_S01_B2_005",
+            "FSS_S01_B2_006",
+            "FSS_S01_B3_007",
+            "FSS_S02_B1_003",
+            "FSS_S02_B1_004",
+            "FSS_S02_B2_005",
+            "FSS_S02_B2_006",
+            "FSS_S02_L1_001",
+            "FSS_S02_L1_002",
+            "FSS_S03_B6_013",
+            "FSS_S03_B7_015",
+            "FSS_S04_B6_013",
+            "FSS_S04_B7_015",
+            "FSS_S05_B5_011",
+            "FSS_S05_L2_017",
+            "FSS_S06_B6_013",
+            "FSS_S06_B7_015"
+        ]
     },
     "model-hyper-para": {
         "depth": 4,
         "n-repeat": 1
     },
     "mlp-hyper-para": {
-        "hidden": [72, 36, 18]
+        "hidden": [
+            72,
+            36,
+            18
+        ]
     },
     "recurrent-hyper-para": {
         "pred-len": 36,
         "env-factor-num": 0,
-        "lstm-hidden-size":55,
-        "rnn-hidden-size":15,
-        "gru-hidden-size":15,
-        "num-workers":0,
-        "batch-size":64,
-        "learning-rate":0.003,
-        "epoch-num":100,
+        "lstm-hidden-size": 55,
+        "rnn-hidden-size": 15,
+        "gru-hidden-size": 15,
+        "num-workers": 0,
+        "batch-size": 64,
+        "learning-rate": 0.003,
+        "epoch-num": 100,
         "load-model": false,
         "save-model": false
     },
@@ -37,10 +62,10 @@
         "learning-rate": 0.006,
         "epoch-num": 100,
         "visdom-env": "Train Process 1",
-        "load-model": true,
-        "save-model": false,
-        "save-name": "type3-p36d4r1",
-        "show-attn": true
+        "load-model": false,
+        "save-model": true,
+        "save-name": "type4-debug",
+        "show-attn": false
     },
     "predict-pics": {
         "server": "/home/lwt/bohaiwan-wattnet/pred_res/pics",
