--- a/utils/config.json
+++ b/utils/config.json
@@ -1,6 +1,6 @@
 {
   "batch_size": 24,
-  "cuda": 1,
+  "cuda": 0,
   "epochs": 160,
   "window": 30,
   "target": 15,
@@ -13,7 +13,7 @@
   "weight_decay": 1e-4,
   "model_name": "WATTNet",
   "input_size": 4,
-  "covariate_size": 0,
+  "covariate_size": 3,
   "data_path": "data/30-15",
   "lstm": {
     "lr": 0.005,
@@ -38,7 +38,8 @@
     "series_len": 30,
     "in_dim": 4,
     "out_dim": 15,
-    "depth": 2,
+    "depth": 3,
+    "embed_dim": 12,
     "n_repeat": 1,
     "show_attn": 0,
     "description": "WATTNet"
