--- a/utils/config.json
+++ b/utils/config.json
@@ -2,11 +2,11 @@
   "batch_size": 24,
   "cuda": 0,
   "epochs": 160,
-  "window": 33,
+  "window": 36,
   "target": 15,
   "loss_function": "MSELoss",
   "optim": "Adam",
-  "mode": "test",
+  "mode": "train",
   "normalized": 2,
   "seperate_timestep": 15,
   "loss_normalized": 0,
@@ -14,7 +14,7 @@
   "model_name": "WATTNet",
   "input_size": 4,
   "covariate_size": 3,
-  "data_path": "data/33-15",
+  "data_path": "data/36-15",
   "lstm": {
     "lr": 0.005,
     "hidden_size": 24,
@@ -35,10 +35,10 @@
   },
   "WATTNet": {
     "lr": 0.001,
-    "series_len": 33,
+    "series_len": 36,
     "in_dim": 4,
     "out_dim": 15,
-    "depth": 2,
+    "depth": 3,
     "embed_dim": 12,
     "n_repeat": 1,
     "show_attn": 0,
