更改合成feature的数目+深度
{'RMSE': [10.362082, 10.429417, 10.419694, 10.462845, 10.804067, 10.577536, 10.633043, 11.195162, 11.1137, 11.388413, 11.623726, 11.960315, 12.115294, 12.429834, 12.743663], 'MAE': [7.970471, 8.017445, 7.996878, 8.035771, 8.278315, 8.160274, 8.19814, 8.700205, 8.7527275, 8.965195, 9.161943, 9.465373, 9.625605, 9.942632, 10.188383], 'MAPE': [0.066770524, 0.067242235, 0.06808747, 0.06965033, 0.07219283, 0.072666205, 0.07323383, 0.07801188, 0.078735024, 0.0811786, 0.08332565, 0.08640821, 0.08837869, 0.091195315, 0.0933173], 'PCC': [0.9705641799296308, 0.9710009638790897, 0.9703323816999336, 0.9695894536471279, 0.9665498027692006, 0.9666443900169017, 0.9660896055183823, 0.9621555960023156, 0.9622142630317441, 0.959347924382449, 0.9565815291202318, 0.9528829996808812, 0.9502131218424771, 0.9469120888697571, 0.9440926038680051]}

--- a/utils/config.json
+++ b/utils/config.json
@@ -6,14 +6,14 @@
   "target": 15,
   "loss_function": "MSELoss",
   "optim": "Adam",
-  "mode": "train",
+  "mode": "test",
   "normalized": 2,
   "seperate_timestep": 15,
   "loss_normalized": 0,
   "weight_decay": 1e-4,
   "model_name": "WATTNet",
   "input_size": 4,
-  "covariate_size": 3,
+  "covariate_size": 2,
   "data_path": "data/36-15",
   "lstm": {
     "lr": 0.005,
@@ -38,7 +38,7 @@
     "series_len": 36,
     "in_dim": 4,
     "out_dim": 15,
-    "depth": 3,
+    "depth": 4,
     "embed_dim": 12,
     "n_repeat": 1,
     "show_attn": 0,
