--- a/utils/config.json
+++ b/utils/config.json
@@ -2,11 +2,11 @@
   "batch_size": 24,
   "cuda": 1,
   "epochs": 160,
-  "window": 27,
+  "window": 24,
   "target": 15,
   "loss_function": "MSELoss",
   "optim": "Adam",
-  "mode": "test",
+  "mode": "train",
   "normalized": 2,
   "seperate_timestep": 15,
   "loss_normalized": 0,
@@ -14,7 +14,7 @@
   "model_name": "WATTNet",
   "input_size": 4,
   "covariate_size": 2,
-  "data_path": "data/27-15",
+  "data_path": "data/24-15",
   "lstm": {
     "lr": 0.005,
     "hidden_size": 24,
@@ -35,7 +35,7 @@
   },
   "WATTNet": {
     "lr": 0.001,
-    "series_len": 27,
+    "series_len": 24,
     "in_dim": 4,
     "out_dim": 15,
     "depth": 3,
