lwt代码预测结果：21预测15
{'RMSE': [3.9317631747430375, 5.115357451004113, 6.387032862702361, 7.208488039762079, 7.937267543894349, 8.758318326999458, 9.422706671300716, 9.837018490349266, 10.358194599550893, 10.618200293690634, 11.061750729687276, 11.341056228226059, 11.862991117145302, 12.12087780277252, 12.22253829310935], 'MAE': [3.0240309412769286, 3.89082832981299, 4.844675742710736, 5.450186100481348, 6.0033716568241475, 6.67885006767888, 7.183082517932022, 7.523292688890338, 7.90543721195994, 8.081339062909416, 8.4232630972879, 8.687075737941758, 9.098622307051816, 9.313845134723625, 9.369038872213343], 'MAPE': [5.894532644799095, 7.190589088181999, 8.92130270902994, 9.87059403964537, 10.716653365845218, 12.13729497858894, 12.781489606764392, 13.180414377839865, 13.989492337528134, 14.043586268895103, 14.43300624655997, 14.478442963117947, 15.255988287688348, 15.69070343768652, 15.772799227078393], 'PCC': [0.9939970950986988, 0.9900099822229206, 0.9850203778956697, 0.9808039784537825, 0.9768669634633251, 0.9722529688972377, 0.9676522514821643, 0.9655508578884762, 0.9618159338601764, 0.9601283131122537, 0.9570392955597472, 0.9553067935733661, 0.9512854923471827, 0.949476517806412, 0.9492280942938649]}

--- a/config.json
+++ b/config.json
@@ -1,52 +1,20 @@
 {
-    "predict-target": "bohaiwan2020-2",
+    "predict-target": "beihang",
     "device": {
         "use-gpu": true,
         "cuda": "cuda:0"
     },
     "data-parameters": {
-        "pred-len": 24,
-        "future-gap": 10,
-        "future-len": 6,
-        "sensor-num": 36,
+        "pred-len": 21,
+        "future-gap": 0,
+        "future-len": 15,
+        "sensor-num": 4,
         "move-interval": 1,
         "valid-sensors": [
-            "FSS_S01_B1_003",
-            "FSS_S01_B1_004",
-            "FSS_S01_B2_005",
-            "FSS_S01_B2_006",
-            "FSS_S01_B3_007",
-            "FSS_S01_L1_002",
-            "FSS_S01_L2_018",
-            "FSS_S02_B1_003",
-            "FSS_S02_B1_004",
-            "FSS_S02_B2_005",
-            "FSS_S02_B2_006",
-            "FSS_S02_L1_001",
-            "FSS_S02_L1_002",
-            "FSS_S03_B1_003",
-            "FSS_S03_B6_013",
-            "FSS_S03_B7_015",
-            "FSS_S04_B6_013",
-            "FSS_S04_B7_015",
-            "FSS_S05_B1_003",
-            "FSS_S05_B2_005",
-            "FSS_S05_B4_009",
-            "FSS_S05_B5_011",
-            "FSS_S05_L2_017",
-            "FSS_S06_B1_003",
-            "FSS_S06_B2_005",
-            "FSS_S06_B6_013",
-            "FSS_S06_B7_015",
-            "FSS_S06_L1_001",
-            "FSS_S07_B1_003",
-            "FSS_S07_B1_004",
-            "FSS_S07_B2_005",
-            "FSS_S07_B2_006",
-            "FSS_S07_B3_008",
-            "FSS_S07_B5_011",
-            "FSS_S07_B5_012",
-            "FSS_S07_L1_001"
+            "sensor1",
+            "sensor2",
+            "sensor3",
+            "sensor4"
         ]
     },
     "model-hyper-para": {
@@ -76,21 +44,21 @@
         "epoch-num": 100,
         "use-visdom": false,
         "visdom-env": "Train Process 1",
-        "load-model": false,
+        "load-model": true,
         "save-model": true,
         "save-name": "p24d3r1g10f6",
         "show-attn": false
     },
     "predict-pics": {
-        "server": "/home/lwt/bohaiwan-wattnet/pred_res/pics",
+        "server": "/home/zoutao/lwt-prediction/pics",
         "local": "C:\\WorkSpace\\bohaiwan-wattnet\\pred_res\\pics"
     },
     "predict-res-table": {
-        "server": "/home/lwt/bohaiwan-wattnet/pred_res/tables",
+        "server": "/home/zoutao/lwt-prediction/tables",
         "local": "C:\\WorkSpace\\bohaiwan-wattnet\\pred_res\\tables"
     },
     "model-weights-loc": {
-        "server": "/home/lwt/bohaiwan-wattnet/model_paras",
+        "server": "/home/zoutao/lwt-prediction/result",
         "local": "C:\\WorkSpace\\bohaiwan-wattnet\\model_paras"
     },
     "run-on-local": false
