增加水位参数得到的结果
{'RMSE': [5.460609402483913, 6.307192843549567, 6.826169932622495, 7.314532297977831, 7.6292854181287515, 8.043681371659048, 8.384422551471156, 8.785369135793374, 9.000290220615199, 9.377727774342986, 9.439509943658653, 10.070096621368576, 10.39509590289436, 10.514647417986186], 'MAE': [3.9924630379748596, 4.675319983693871, 5.003249432385233, 5.451240693470925, 5.799522057187535, 6.056931732743546, 6.339088828679143, 6.629671451141466, 6.7830973458418935, 7.062285130487134, 7.1160494876306615, 7.657310872432475, 7.8396076612565295, 7.94259290564256], 'MAPE': [3.60320291905862, 4.166647401682427, 4.605496514746436, 4.961292457806703, 5.296514669769988, 5.578801451594009, 5.7713370894746285, 6.066485628996563, 6.287123968435299, 6.511415561291809, 6.633372867629597, 6.916549951345681, 7.100862262786703, 7.12465916316373], 'PCC': [0.990505740198968, 0.987745066029909, 0.9847593028372421, 0.9816775031350884, 0.9792607104182786, 0.975880974068335, 0.9732915303799348, 0.9703080003760032, 0.9674482165977368, 0.9654402794929473, 0.9627398807940843, 0.9591506974302006, 0.9559426699654685, 0.9552339902082905]}

--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
     "predict-target": "beihang",
     "device": {
         "use-gpu": true,
-        "cuda": "cuda:0"
+        "cuda": "cuda:1"
     },
     "data-parameters": {
-        "pred-len": 21,
+        "pred-len": 27,
         "future-gap": 0,
         "future-len": 15,
         "sensor-num": 4,
@@ -44,7 +44,7 @@
         "epoch-num": 100,
         "use-visdom": false,
         "visdom-env": "Train Process 1",
-        "load-model": true,
+        "load-model": false,
         "save-model": true,
         "save-name": "p24d3r1g10f6",
         "show-attn": false
