21预测21的最好结果
{'RMSE': [4.164528039823094, 4.995188176684578, 5.811462214739397, 6.600230494149368, 7.208320727515663, 7.868749943911497, 8.331112605112397, 8.860524712184398, 9.328981710918887, 9.817528183542723, 10.17077377314973, 10.456843677028179, 10.8631692049896, 11.169826662272763, 11.470133905652887, 11.565925822628564, 12.026568191341575, 12.205009516604145, 12.425155616672061, 12.792794598449444, 13.002315420002466], 'MAE': [3.1735858158468737, 3.8893445309847903, 4.468892251153175, 5.0516433455789045, 5.46802389086003, 5.968386116708324, 6.270053995125956, 6.600013871782392, 6.968610658047641, 7.399335425597833, 7.692990216998089, 7.907418552798788, 8.267939742735656, 8.512831475690907, 8.758817628210407, 8.878956415740587, 9.225210668413588, 9.389218265732907, 9.513354912355107, 9.908831716521592, 10.049574857332347], 'MAPE': [3.0647145598488716, 3.871255744893799, 4.603814129392631, 5.287151904754695, 5.868602935833432, 6.493853818433932, 6.879437609129891, 7.335976795592989, 7.77025470375112, 8.320567612559232, 8.648427999848414, 8.90980793963175, 9.348597280498101, 9.635650562140977, 10.015442295381947, 10.003914634155635, 10.5486081918397, 10.671535404136296, 10.936254116023893, 11.335780862343062, 11.571724161603488], 'PCC': [0.9951376408047427, 0.9921622343608638, 0.9889034009806712, 0.9852600101100647, 0.9820491062576087, 0.9786305619953513, 0.9756026295382079, 0.97215440083991, 0.9689546251494223, 0.966010249480251, 0.9638838806123926, 0.9618054279348, 0.9591241789653413, 0.9577713659373714, 0.956004263716298, 0.955491328516676, 0.9530858555811792, 0.9533233610682925, 0.9520432658187634, 0.9492806423166456, 0.948540879764677]}

--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "data-parameters": {
         "pred-len": 21,
         "future-gap": 0,
-        "future-len": 15,
+        "future-len": 21,
         "sensor-num": 4,
         "move-interval": 1,
         "valid-sensors": [
@@ -44,7 +44,7 @@
         "epoch-num": 100,
         "use-visdom": false,
         "visdom-env": "Train Process 1",
-        "load-model": false,
+        "load-model": true,
         "save-model": true,
         "save-name": "p24d3r1g10f6",
         "show-attn": false
