增加水位和温度
{'RMSE': [5.312192550314432, 5.506569051322532, 6.016389778087729, 6.552758539744061, 7.001309158765229, 7.478687645445789, 7.9564884875130035, 8.354963807851476, 8.768586300478221, 9.244818745583027, 9.635920960465969, 9.935253877725888, 10.35539011682752, 10.633613838326934, 11.069951957846163, 11.326586508258309, 11.686577813779094, 11.989210185508995, 12.344861624403626, 12.744449311439316, 12.992556518246397], 'MAE': [4.129423679596769, 4.242126449261325, 4.655995886125774, 5.071658612809525, 5.476369076979671, 5.831366381918465, 6.214287202915285, 6.495835811105233, 6.799589855207714, 7.163069683706065, 7.51261699862378, 7.702883624782659, 8.087642010114456, 8.293875035067154, 8.693057992605242, 8.906220067805164, 9.19011804797561, 9.458665146440074, 9.772173648746174, 10.09619960158502, 10.264159639987657], 'MAPE': [3.3802256069558196, 3.6202501332112966, 4.062689250116233, 4.522549523972663, 5.036553006170835, 5.43769046595335, 5.82867750333084, 6.159900745977884, 6.447361832535343, 6.868378212898147, 7.125559971545499, 7.377459629554967, 7.750541297539569, 7.841471466234555, 8.278324636877535, 8.451034197133676, 8.685419477599252, 8.911506263728802, 9.170494586450436, 9.454508971278024, 9.62010268765769], 'PCC': [0.9940379155622634, 0.9931844280330786, 0.9914563449781503, 0.9891341675646682, 0.9863408464799711, 0.9839171092780752, 0.9812490655678666, 0.9786486785935502, 0.9755996956479918, 0.9729384415989686, 0.9712092941916387, 0.9689323429539354, 0.9668125608482099, 0.9648229066670209, 0.9621243823609936, 0.9602437722752488, 0.958708369283626, 0.955301242999523, 0.9527225862886742, 0.9493015156510298, 0.947705050405102]}

--- a/config.json
+++ b/config.json
@@ -44,7 +44,7 @@
         "epoch-num": 100,
         "use-visdom": false,
         "visdom-env": "Train Process 1",
-        "load-model": true,
+        "load-model": false,
         "save-model": true,
         "save-name": "p24d3r1g10f6",
         "show-attn": false
